--- a/doc/src/_static/inet_theme.css
+++ b/doc/src/_static/inet_theme.css
@@ -14,9 +14,8 @@ body { font-family: "Helvetica","Arial",sans-serif }
 .globaltoc ul li {min-height:24px }
 
 .page-content pre { white-space: pre; }
-.page-content p { font-size: 1.1rem; }
-.page-content h2 { padding-top: 1rem; margin-bottom: 0.5rem }
-.page-content h3, .page-content h4 { padding-top: 0.5rem; margin-bottom: 0.5rem }
+.page-content p, .page-content ul { font-size: 1.1rem; }
+.page-content h2, .page-content h3, .page-content h4 { padding-top: 1rem; margin-bottom: 0.5rem }
 
 .globaltoc ul li.toctree-l2 { font-size: 0.8rem }
 
