--- a/doc/src/_static/inet_theme.css
+++ b/doc/src/_static/inet_theme.css
@@ -60,9 +60,9 @@ div.admonition {
 
 .page-content .code, .page-content code:not(.download) {
     margin: 0 4px;
-    padding: 0 4px;
+    padding: 1px 4px;
     background: rgba(0,0,0,.05);
-    border-radius: 2px;
+    border-radius: 3px;
 }
 
 .page-content code.literal {
@@ -73,10 +73,28 @@ div.admonition {
     padding-right: 2px;
 }
 
-
 /* higlighter backgrounds */
 .highlight-cpp .highlight { background-color: #e6f3ff }
 .highlight-ini .highlight { background-color: #fef5d6 }
 .highlight-ned .highlight { background-color: #eeffe4 }
 .highlight-msg .highlight { background-color: #fcf5ff }
 
+/* bottom navigation buttons */
+.pagenation #button-prev {
+    padding: 0 30px;
+    justify-content: left;
+}
+
+.pagenation #button-next {
+    padding: 0 30px;
+    justify-content: right;
+}
+
+a.download:before {
+    margin-right: -4px;
+}
+
+div.figure, video {
+    margin: 0.5em 0.5em 1em 0.5em;
+    padding: 0;
+}
